# spa-audit

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  TASK.md  fly.toml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: BookingSection.tsx  DemoChat.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProblemSolution.tsx  StickyWhatsapp.tsx  Testimonials.tsx
lib/: site.ts
outreach/: .env.example  README.md  __init__.py  admin.py  admin_jobs.py  api.py  booking.py  cli.py  config.py  db.py  jobs.py  models.py  requirements.txt  scheduler.py
outreach/crm/: __init__.py  repo.py
outreach/scraper/: __init__.py  enrich.py  places.py
outreach/tests/: conftest.py  test_admin.py  test_api.py  test_booking.py  test_enrich.py  test_jobs.py  test_models.py  test_repo.py  test_scheduler.py  test_templates.py
outreach/whatsapp/: __init__.py  client.py  templates.py  webhook.py
