[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salon-outreach"
version = "0.1.0"
description = "WhatsApp outreach + lead CRM for Nigerian salons & spas"
readme = "outreach/README.md"
requires-python = ">=3.10"
dependencies = [
    "twilio>=9.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "tenacity>=8.5",
    "sqladmin>=0.20.1",
    "itsdangerous>=2.2.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
outreach = "outreach.cli:app"

[tool.setuptools]
packages = [
    "outreach",
    "outreach.crm",
    "outreach.scraper",
    "outreach.whatsapp",
]

[tool.pytest.ini_options]
testpaths = ["outreach/tests"]
